[package]
name = "rabbit-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
indexmap = "2.2.6"
futures = "0.3.30"
