[package]
name = "rabbit-kv"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Rabbit-Company/rabbit-kv"
description = "Simple key-value store written in Rust with HTTP and WebSockets support"

[dependencies]
axum = { version = "0.7", features = ["ws", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
indexmap = "2.2"
futures = "0.3"
