[package]
name = "rabbit-kv"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Rabbit-Company/rabbit-kv"
description = "Simple key-value store written in Rust with HTTP, WebSockets and TCP support"
categories = ["database-implementations"]

[dependencies]
axum = { version = "0.8.4", features = ["ws", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
indexmap = "2.9"
futures = "0.3"
